--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ djangorestframework-simplejwt==5.3.0
 
 # Filtering
 django-filter==23.4
+
+# Build tools (to fix pkg_resources deprecation warning)
+setuptools>=68.0.0
+
+# Image processing
+Pillow>=10.0.0
