feet: cambiando todo al español

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ setuptools>=68.0.0
 
 # Image processing
 Pillow>=10.0.0
+
+# PDF Generation (opcional)
+# weasyprint>=60.0  # Descomenta si necesitas generar PDFs
+
+# Database connectors (elige uno según tu BD)
+# mysqlclient==2.2.0  # Para MySQL
+# psycopg2-binary==2.9.9  # Para PostgreSQL
